hphp/hack/test/typecheck/disallow_array/typehint1.php
<?hh

final class C {
  private ?array<int> $arr;
}
